# seattle-emergency-response-platform

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
dags/: emergency_pipeline_dag.py
ingestion/: load_911_calls.py  load_weather.py  main.py
ingestion/src/: load_911_calls.py  load_census.py  load_raw_to_snowflake.py  load_weather.py  main.py
ingestion/src/utils/: s3_helper.py  snowflake_helper.py
seattle_erp/: dbt_project.yml
seattle_erp/macros/: generate_schema_name.sql
seattle_erp/models/gold/: gld_call_volume_trends.sql  gld_calls_per_capita.sql  gld_incident_enriched.sql  gld_spatial_hotspots.sql  gld_weather_impact.sql  schema.yml
seattle_erp/models/silver/: schema.yml  slv_911_calls.sql  slv_census.sql  slv_census_tracts.sql  slv_weather.sql  sources.yml
