[project]
name = "seattle-emergency-response-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=3.2.1",
    "boto3>=1.42.97",
    "dbt-snowflake>=1.11.4",
    "geopandas>=1.1.3",
    "loguru>=0.7.3",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.13",
    "snowflake-connector-python>=4.4.0",
    "sodapy>=2.2.0",
]

[project.scripts]
seattle-emergency-response-platform = "seattle_emergency_response_platform:main"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "S", "SIM", "RUF", "T20"]
